--- a/themes/myTheme/layouts/partials/header.html
+++ b/themes/myTheme/layouts/partials/header.html
@@ -22,9 +22,10 @@
             <span>Search</span>
         </div>
         <ul>
+            <a href="/categories/"><li>カテゴリ</li></a>
+            <a href="/tags/"><li>タグ</li></a>
             <a href="/about/"><li>About</li></a>
             <a href="/contribute/"><li>記事を書く</li></a>
-            <a href="/tags/"><li>タグを探す</li></a>
             <a href="" class="icon"><i class="fa-brands fa-github"></i></a>
         </ul>
     </nav>
