--- a/assets/sass/article.scss
+++ b/assets/sass/article.scss
@@ -22,6 +22,12 @@ $tags: (
         description: '3次元',
         color: #ef5bff,
     ),
+
+    (
+        class: 'hugo',
+        description: '世界最速のウェブサイト構築フレームワーク',
+        color: #FF4088,
+    ),
 );
 
 main {
