--- a/themes/myTheme/layouts/partials/header.html
+++ b/themes/myTheme/layouts/partials/header.html
@@ -25,7 +25,7 @@
             <a href="/tags/"><li>タグ</li></a>
             <a href="/about/"><li>About</li></a>
             <a href="/contribute/"><li>記事を書く</li></a>
-            <a href="" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/lin-24-ia/OpenStudy" target="_blank" rel="noopener noreferrer" class="icon"><i class="fa-brands fa-github"></i></a>
         </ul>
     </nav>
 
