--- a/themes/myTheme/layouts/_default/single.html
+++ b/themes/myTheme/layouts/_default/single.html
@@ -42,25 +42,21 @@
                     <div class="contributors">
                         <div class="contributors-label">
                             <span class="description">作成した人</span>
-                            <span class="personNum">163</span>
+                            {{ with .Params.author }}
+                                <span class="personNum">{{ . | len }}</span>
+                            {{ end }}
                         </div>
                         <div class="contributors-icon">
-                            <img src="/images/profileIconSample/131.jpeg" alt="">
-                            <img src="/images/profileIconSample/100.jpeg" alt="">
-                            <img src="/images/profileIconSample/38.jpeg" alt="">
-                            <img src="/images/profileIconSample/37.jpeg" alt="">
-                            <img src="/images/profileIconSample/137.jpeg" alt="">
-                            <img src="/images/profileIconSample/437.jpeg" alt="">
-                            <img src="/images/profileIconSample/487.jpeg" alt="">
-                            <img src="/images/profileIconSample/97.jpeg" alt="">
                             {{ with .Params.author }}
                                 {{ range . }}
-                                    <a href="https://github.com/{{ print . }}">
-                                        <img src="https://github.com/{{ print . }}.png" alt="">
+                                    <a href="https://github.com/{{ . }}" target="_blank" rel="noopener noreferrer">
+                                        <img src="https://github.com/{{ . }}.png" alt="">
                                     </a>
                                 {{ end }}
+                                {{ if gt (. | len) 9}}
+                                    <i class="fa-solid fa-plus"></i>
+                                {{ end }}
                             {{ end}}
-                            <i class="fa-solid fa-plus"></i>
                         </div>
                     </div>
                     <div class="button">
@@ -68,10 +64,18 @@
                             <i class="fa-regular fa-heart"></i>
                             <span>thanks!</span>
                         </div>
-                        <div class="link-to-repo">
-                            <i class="fa-solid fa-code-pull-request"></i>
-                            <span>編集する</span>
-                        </div>
+                        {{ $path := "" }}
+                        {{ if .IsSection }}
+                            {{ $path = print (.RelPermalink | path.Clean) "/_index.md" }}
+                        {{ else }}
+                            {{ $path = print (.RelPermalink | path.Clean) ".md" }}
+                        {{ end }}
+                        <a href="https://github.com/lin-24-ia/OpenStudy/tree/main/content{{ $path }}" target="_blank" rel="noopener noreferrer">
+                            <div class="link-to-repo">
+                                <i class="fa-solid fa-code-pull-request"></i>
+                                <span>編集する</span>
+                            </div>
+                        </a>
                     </div>
                 </aside>
                 {{ with .TableOfContents }}
