--- a/assets/sass/article.scss
+++ b/assets/sass/article.scss
@@ -330,7 +330,7 @@ main {
                         code {
                             font-family: 'Roboto Mono', monospace;
                             background-color: #eee;
-                            padding: 4px 8px;
+                            padding: 0 6px;
                             margin: 0 4px;
                             border-radius: 3px;
                         }
@@ -370,6 +370,8 @@ main {
 
                         code {
                             font-family: 'Roboto Mono', monospace;
+                            padding: 0;
+                            margin: 0;
                         }
                     }
 
@@ -383,7 +385,6 @@ main {
                             code {
                                 font-family: 'Roboto Mono', monospace;
                                 font-size: 14px;
-                                background-color: blue;
                             }
                         }
                     }
