--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -28,4 +28,16 @@ $tags: (
         description: '世界最速のウェブサイト構築フレームワーク',
         color: #FF4088,
     ),
+
+    (
+        class: 'goldmark',
+        description: '世界最速のウェブサイト構築フレームワーク',
+        color: #259dff,
+    ),
+
+    (
+        class: 'highlight',
+        description: '世界最速のウェブサイト構築フレームワーク',
+        color: #8cffd7,
+    ),
 );
